--- a/express/package.json
+++ b/express/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.34.1"
   }
 }
